--- a/prank.html
+++ b/prank.html
@@ -3,36 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Surprise!</title>
+    <title>IGNITTE Induction</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Montserrat', sans-serif;
-            background: black;
-            color: white;
-            text-align: center;
+            background: url('fake.png') no-repeat center center fixed;
+            background-size: cover;
             height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
+            position: relative;
         }
 
+        /* 🎨 Faded Overlay Effect */
+        body::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.6); /* Dark overlay for contrast */
+            z-index: -1;
+        }
+
+        /* 🎯 Centered Message Box */
         .message {
-            font-size: 28px;
-            font-weight: bold;
             background: rgba(255, 255, 255, 0.1);
             padding: 40px;
             border-radius: 15px;
             box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.3);
+            text-align: center;
+            max-width: 600px;
+            backdrop-filter: blur(10px); /* Blurred glass effect */
+            animation: fadeIn 2s ease-in-out;
+        }
+
+        /* ✨ Smooth Fade-in Animation */
+        @keyframes fadeIn {
+            from { opacity: 0; transform: scale(0.9); }
+            to { opacity: 1; transform: scale(1); }
         }
 
         h1 {
+            font-size: 42px;
+            font-weight: bold;
             color: #f1c40f;
-            font-size: 40px;
+            text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.7);
         }
 
         p {
-            font-size: 24px;
+            font-size: 22px;
+            color: white;
+            font-weight: 300;
         }
 
         .emoji {
@@ -43,10 +68,10 @@
 <body>
 
     <div class="message">
-        <h1 class="emoji">😆🎉</h1>
-        <h1>It's a prank!</h1>
-        <p>You are already INDUCTED into <b>IGNITTE</b>! 🔥</p>
-        <p>We made you take the toughest test for no reason. Welcome aboard! 🚀</p>
+        <h1 class="emoji">🔥🎉</h1>
+        <h1>Congratulations!</h1>
+        <p>You are now officially INDUCTED into <b>IGNITTE</b>.</p>
+        <p>Welcome to the journey of <b>Burn to Shine!</b> 🚀</p>
     </div>
 
 </body>
