--- a/prank.html
+++ b/prank.html
@@ -12,8 +12,9 @@
             background-size: cover;
             height: 100vh;
             display: flex;
-            justify-content: center;
+            justify-content: space-between; /* Space between logo & box */
             align-items: center;
+            padding: 0 10%;
             position: relative;
         }
 
@@ -25,19 +26,25 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.6); /* Dark overlay for contrast */
+            background: rgba(0, 0, 0, 0.6);
             z-index: -1;
         }
 
-        /* 🎯 Centered Message Box */
+        /* 🔥 IGNITTE Logo */
+        .logo {
+            width: 200px; /* Enlarged logo */
+            height: auto;
+        }
+
+        /* 🎯 Right-Side Message Box */
         .message {
             background: rgba(255, 255, 255, 0.1);
-            padding: 40px;
+            padding: 30px;
             border-radius: 15px;
             box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.3);
             text-align: center;
-            max-width: 600px;
-            backdrop-filter: blur(10px); /* Blurred glass effect */
+            max-width: 450px; /* Reduced width */
+            backdrop-filter: blur(10px);
             animation: fadeIn 2s ease-in-out;
         }
 
@@ -48,25 +55,29 @@
         }
 
         h1 {
-            font-size: 42px;
+            font-size: 36px;
             font-weight: bold;
             color: #f1c40f;
             text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.7);
         }
 
         p {
-            font-size: 22px;
+            font-size: 18px;
             color: white;
             font-weight: 300;
         }
 
         .emoji {
-            font-size: 50px;
+            font-size: 40px;
         }
     </style>
 </head>
 <body>
 
+    <!-- Enlarged IGNITTE Logo on the Left -->
+    <img src="logo.png" alt="IGNITTE Logo" class="logo">
+
+    <!-- Message Box on the Right -->
     <div class="message">
         <h1 class="emoji">🔥🎉</h1>
         <h1>Congratulations!</h1>
