--- a/prank.html
+++ b/prank.html
@@ -8,13 +8,12 @@
     <style>
         body {
             font-family: 'Montserrat', sans-serif;
-            background: url('fake.png') no-repeat center center fixed;
+            background: url('prank1.jpeg') no-repeat center center fixed;
             background-size: cover;
             height: 100vh;
             display: flex;
-            justify-content: space-between; /* Space between logo & box */
+            justify-content: center; /* Centering the dialog box */
             align-items: center;
-            padding: 0 10%;
             position: relative;
         }
 
@@ -30,21 +29,24 @@
             z-index: -1;
         }
 
-        /* 🔥 IGNITTE Logo */
+        /* 🔥 IGNITTE Logo (Left Corner) */
         .logo {
-            width: 200px; /* Enlarged logo */
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            width: 150px; /* Adjust size */
             height: auto;
         }
 
-        /* 🎯 Right-Side Message Box */
+        /* 🎯 Centered Message Box with Semi-Transparent Glassmorphism */
         .message {
-            background: rgba(255, 255, 255, 0.1);
+            background: rgba(255, 255, 255, 0.15); /* Semi-transparent */
             padding: 30px;
             border-radius: 15px;
-            box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.3);
+            box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.2);
             text-align: center;
-            max-width: 450px; /* Reduced width */
-            backdrop-filter: blur(10px);
+            max-width: 500px;
+            backdrop-filter: blur(15px); /* More Glass Effect */
             animation: fadeIn 2s ease-in-out;
         }
 
@@ -74,10 +76,10 @@
 </head>
 <body>
 
-    <!-- Enlarged IGNITTE Logo on the Left -->
+    <!-- IGNITTE Logo in the Left Corner -->
     <img src="logo.png" alt="IGNITTE Logo" class="logo">
 
-    <!-- Message Box on the Right -->
+    <!-- Centered Message Box -->
     <div class="message">
         <h1 class="emoji">🔥🎉</h1>
         <h1>Congratulations!</h1>
