--- a/testpage.html
+++ b/testpage.html
@@ -71,7 +71,7 @@
 <body>
 
     <div class="container">
-        <h2>🎯 IGNITTE FINAL TEST </h2>
+        <h2> IGNITTE FINAL TEST </h2>
         <p class="timer">Time left: <span id="time">2:00</span></p>
 
         <!-- Sample Questions (Replace with actual images) -->
