--- a/testpage.html
+++ b/testpage.html
@@ -78,13 +78,13 @@
 <body>
 
     <div class="container">
-        <h2> IGNITTE FINAL TEST </h2>
+        <h2>🔥 IGNITTE FINAL TEST 🔥</h2>
         <p class="timer">Time left: <span id="time">1:00</span></p>
 
         <!-- 📝 MCQ Questions -->
         <div class="question">
             <p><b>1️⃣ Question 1:</b></p>
-            <img src="mcq1.png" alt="Question 1">
+            <img src="mcq1.png" alt="MCQ 1">
             <br>
             <input type="radio" name="q1" value="A"> A
             <input type="radio" name="q1" value="B"> B
@@ -94,7 +94,7 @@
 
         <div class="question">
             <p><b>2️⃣ Question 2:</b></p>
-            <img src="mcq2.png" alt="Question 2">
+            <img src="mcq2.png" alt="MCQ 2">
             <br>
             <input type="radio" name="q2" value="A"> A
             <input type="radio" name="q2" value="B"> B
@@ -102,10 +102,9 @@
             <input type="radio" name="q2" value="D"> D
         </div>
 
-        <!-- More questions (mcq3, mcq4, mcq5, integer1, integer2, etc.) -->
         <div class="question">
             <p><b>3️⃣ Question 3:</b></p>
-            <img src="mcq3.png" alt="Question 3">
+            <img src="mcq3.png" alt="MCQ 3">
             <br>
             <input type="radio" name="q3" value="A"> A
             <input type="radio" name="q3" value="B"> B
@@ -113,15 +112,61 @@
             <input type="radio" name="q3" value="D"> D
         </div>
 
-        <!-- Integer Type Question -->
         <div class="question">
-            <p><b>4️⃣ Solve this:</b></p>
-            <img src="int1.png" alt="Integer Question">
+            <p><b>4️⃣ Question 4:</b></p>
+            <img src="mcq4.png" alt="MCQ 4">
+            <br>
+            <input type="radio" name="q4" value="A"> A
+            <input type="radio" name="q4" value="B"> B
+            <input type="radio" name="q4" value="C"> C
+            <input type="radio" name="q4" value="D"> D
+        </div>
+
+        <div class="question">
+            <p><b>5️⃣ Question 5:</b></p>
+            <img src="mcq5.png" alt="MCQ 5">
+            <br>
+            <input type="radio" name="q5" value="A"> A
+            <input type="radio" name="q5" value="B"> B
+            <input type="radio" name="q5" value="C"> C
+            <input type="radio" name="q5" value="D"> D
+        </div>
+
+        <!-- 🔢 Integer Type Questions -->
+        <div class="question">
+            <p><b>6️⃣ Solve this:</b></p>
+            <img src="int1.png" alt="Integer Q1">
             <br>
             <input type="number" name="int1" placeholder="Enter answer">
         </div>
 
-        <!-- Add the rest of the questions similarly -->
+        <div class="question">
+            <p><b>7️⃣ Solve this:</b></p>
+            <img src="int2.png" alt="Integer Q2">
+            <br>
+            <input type="number" name="int2" placeholder="Enter answer">
+        </div>
+
+        <div class="question">
+            <p><b>8️⃣ Solve this:</b></p>
+            <img src="int3.png" alt="Integer Q3">
+            <br>
+            <input type="number" name="int3" placeholder="Enter answer">
+        </div>
+
+        <div class="question">
+            <p><b>9️⃣ Solve this:</b></p>
+            <img src="int4.png" alt="Integer Q4">
+            <br>
+            <input type="number" name="int4" placeholder="Enter answer">
+        </div>
+
+        <div class="question">
+            <p><b>🔟 Solve this:</b></p>
+            <img src="int5.png" alt="Integer Q5">
+            <br>
+            <input type="number" name="int5" placeholder="Enter answer">
+        </div>
 
         <br><br>
         <button id="submitBtn" disabled>Submit Test</button>
