--- a/mathtestpage.html
+++ b/mathtestpage.html
@@ -78,7 +78,7 @@
 <body>
 
     <div class="container">
-        <h2>🔥 IGNITTE FINAL TEST 🔥</h2>
+        <h2> IGNITTE FINAL TEST </h2>
         <p class="timer">Time left: <span id="time">1:00</span></p>
 
         <!-- 📝 MCQ Questions -->
