--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@
             // Redirect based on subject
             if (subject === "math") {
                 window.location.href = `mathtestpage.html?name=${name}&roll=${roll}&subject=${subject}`;
+            } else if (subject === "physics") {
+                window.location.href = `phytestpage.html?name=${name}&roll=${roll}&subject=${subject}`;
             } else {
                 window.location.href = `testpage.html?name=${name}&roll=${roll}&subject=${subject}`;
             }
