--- a/prank.html
+++ b/prank.html
@@ -87,7 +87,7 @@
     <!-- Centered Message Box -->
     <div class="message">
         <h1 class="emoji">🔥🎉</h1>
-        <h1 class="congrats">Congratulations!</h1>
+        <h1 class="congrats"> It was a Prank !! </h1>
         <p>You are now officially INDUCTED into <b>IGNITTE</b>.</p>
         <p>Welcome to the journey of <b>Burn to Shine!</b> 🚀</p>
     </div>
