--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+m<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -158,7 +158,7 @@
             } else if (subject === "physics") {
                 window.location.href = `phytestpage.html?name=${name}&roll=${roll}&subject=${subject}`;
             } else {
-                window.location.href = `testpage.html?name=${name}&roll=${roll}&subject=${subject}`;
+                window.location.href = `chemtestpage.html?name=${name}&roll=${roll}&subject=${subject}`;
             }
         });
     </script>
