--- a/mathtestpage.html
+++ b/mathtestpage.html
@@ -186,7 +186,7 @@
         }
 
         function autoSubmit() {
-            window.location.href = "prank.html"; // Redirect to prank page
+            window.location.href = "resultloader.html"; // Redirect to prank page
         }
 
         let timer = setInterval(updateTimer, 1000);
