--- a/resultloader.html
+++ b/resultloader.html
@@ -100,7 +100,7 @@
     <!-- Secret Input for Manual Control -->
     <div class="secret-container" id="secretContainer">
         <p>👑 Admin Access Required</p>
-        <input type="password" id="secretKey" placeholder="Enter Secret Key">
+        <input type="password" id="secretKey" placeholder="Enter the Password">
         <button onclick="manualRedirect()">Unlock</button>
     </div>
 
