--- a/resultloader.html
+++ b/resultloader.html
@@ -118,7 +118,7 @@
         // Manual Redirect (Admin Override)
         function manualRedirect() {
             const key = document.getElementById("secretKey").value;
-            if (key === "Vibinking_1665") {  // Change this to your secret key
+            if (key === "ignitte2025") {  // Change this to your secret key
                 window.location.href = "prank.html";
             } else {
                 alert("❌ Incorrect Key! Access Denied.");
