--- a/prank.html
+++ b/prank.html
@@ -87,8 +87,9 @@
     <!-- Centered Message Box -->
     <div class="message">
         <h1 class="emoji">🔥🎉</h1>
-        <h1 class="congrats"> This Test was a Prank !! </h1>
-        <p>You are already INDUCTED into <b>IGNITTE</b>.</p>
+        <h1 class="congrats">🎭 MISSION FAILED SUCCESSFULLY 🚀 !! </h1>
+        <p>💀 Your brain just went through extreme pressure… for NOTHING! 🤣</p>
+        <p>You were already INDUCTED into <b>IGNITTE</b>.</p>
     </div>
 
 </body>
