--- a/designtest.html
+++ b/designtest.html
@@ -71,7 +71,7 @@
 <body>
 
     <div class="container">
-        <h2> IGNITTE PHYSICS TEST </h2>
+        <h2> IGNITTE DESIGN TEST </h2>
         <p class="timer">Time left: <span id="time">1:00</span></p>
 
         <!-- 7 MCQ Questions -->
